9/2/2022
	Added support for counting solutions for Japanese Sum Sudoku
	
9/1/2022
	Added support for slow thermometers
	Added support for doubling lines
	Added support for magic squares
	Added support for position sums
	Added support for Japanese sum sudoku, excluding countSolutions method.
	